--- a/20.html
+++ b/20.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html>
     <head>
-         <meta charset="UTF-8">
+        <meta charset="UTF-8">
         <title>CS Peer Tutoring: ECS 20</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <link href="style.css" rel="stylesheet"></link>
     </head>
     <body>
+        <h1>ECS 20 Tutoring</h1>
+        <p>
+            Welcome to CS Peer Tutoring! Every quarter, the CS Tutoring
+            Committee organizes undergraduate volunteer tutors to help students
+            with undergraduate CS courses. All tutors are approved by the CS
+            department, and received high grades in the courses they tutor.
+        </p>
+        <p>
+            On this page, you can find the hours for all of our ECS 20 tutors
+            this quarter. We show tutoring hours for the next 7 days. If this
+            page is not loading correctly, you can always see the full list of
+            tutors <a
+                href="https://calendar.google.com/calendar/embed?src=ucdcstutoring@gmail.com&mode=WEEK&ctz=America/Los_Angeles&pli=1">here</a>
+            (which lists tutors for all courses).
+        </p>
+        <p>
+            CS tutoring is free for all students --- just head down to Kemper
+            75 (in the basement of Kemper Hall, look for signs pointing to the
+            CSIF) at one of the times shown below and sign in on the whiteboard.
+        </p>
+        <p>
+            Please note that tutors may show up a few minutes after the listed
+            time here (eg. if they have a class beforehand). Contact
+            ucdcstutoring@gmail.com with any questions.
+        </p>
         <script src='calendar.js'></script>
         <script async defer src="https://apis.google.com/js/api.js"
             onload="this.onload=function(){};handleClientLoad()"
             onreadystatechange="if (this.readyState === 'complete') this.onload()">
-        </script>
-        <script>
-            var course_number = "20";
         </script>
     </body>
 </html>
