Added a bunch of other courses and script to generate them

--- a/154B.html
+++ b/154B.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>CS Peer Tutoring: ECS 20</title>
+        <title>CS Peer Tutoring: ECS 154B</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         <link href="style.css" rel="stylesheet"></link>
     </head>
     <body>
-        <h1>ECS 20 Tutoring</h1>
+        <h1>ECS 154B Tutoring</h1>
         <p>
             Welcome to CS Peer Tutoring! Every quarter, the CS Tutoring
             Committee organizes undergraduate volunteer tutors to help students
@@ -16,7 +16,7 @@
         </p>
         <p>
             On this page, you can find the hours for all of our ECS
-            20 tutors this quarter. We show tutoring hours for
+            154B tutors this quarter. We show tutoring hours for
             the next 7 days. If this page is not loading correctly, you can
             always see the full list of tutors <a
             href="https://calendar.google.com/calendar/embed?src=ucdcstutoring@gmail.com&mode=WEEK&ctz=America/Los_Angeles&pli=1">here</a>
@@ -33,8 +33,8 @@
             ucdcstutoring@gmail.com with any questions.
         </p>
         <script>
-            window.course_number = "20";
-            window.course_letter = "";
+            window.course_number = "154";
+            window.course_letter = "B";
         </script>
         <script src="calendar.js"></script>
         <script async defer src="https://apis.google.com/js/api.js"
