--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
         <h1>Find-A-Tutor</h1>
         <ul>
             <li><a href="20.html">ECS 20</a></li>
+
+            <li><a href="32A.html">ECS 32A</a></li>
+            <li><a href="32B.html">ECS 32B</a></li>
+
+            <li><a href="34.html">ECS 34</a></li>
+
+            <li><a href="36A.html">ECS 36A</a></li>
+            <li><a href="36B.html">ECS 36B</a></li>
+            <li><a href="36C.html">ECS 36C</a></li>
+
+            <li><a href="50.html">ECS 50</a></li>
+            <li><a href="120.html">ECS 120</a></li>
+
+            <li><a href="122A.html">ECS 122A</a></li>
+            <li><a href="122B.html">ECS 122B</a></li>
+
+            <li><a href="132.html">ECS 132</a></li>
+            <li><a href="140A.html">ECS 140A</a></li>
+            <li><a href="150.html">ECS 150</a></li>
+            <li><a href="152A.html">ECS 152A</a></li>
+            <li><a href="153.html">ECS 153</a></li>
+            <li><a href="154B.html">ECS 154B</a></li>
+
+            <li><a href="162.html">ECS 162</a></li>
+            <li><a href="174.html">ECS 174</a></li>
+            <li><a href="178.html">ECS 178</a></li>
+            <li><a href="188.html">ECS 188</a></li>
+
             <li><a href="https://calendar.google.com/calendar/embed?src=ucdcstutoring@gmail.com&mode=WEEK&ctz=America/Los_Angeles&pli=1">Other ECS courses</a></li>
         </ul>
     </body>
